--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,8 +31,8 @@
                 <div class="title-name"><h2> Om Konferensen <img src="img/title-pacman.png" alt=""></h2></div>
             </div>
             <div class="about-web"> <!-- Konferensinformation -->
-                <p> <img src="img/october.png" alt=""> Datum: 18 - 20 oktober 2024 </p>
-                <p> <img src="img/gps.png" alt=""> Plats: Göteborgs Konferenscenter </p>
+                <p><img src="img/october.png" alt=""> Datum: 18 - 20 oktober 2024 </p>
+                <p><img src="img/gps.png" alt=""> Plats: Göteborgs Konferenscenter </p>
                 <p class="about-conference"> Välkommen till årets största konferens om frontendutveckling! Under tre dagar kan du lära dig om de senaste trenderna inom webbutveckling, design och användarupplevelse (UX) genom över 10 seminarier med experter. 
                     Frontendutvecklingskonferensen är ett årligt evenemang för utvecklare och designers som vill hålla sig uppdaterade med de nyaste verktygen och trenderna. 
                     Det erbjuds föreläsningar, workshops och nätverksmöjligheter, med fokus på ämnen som HTML, CSS, JavaScript, UX/UI och hur man gör webbsidor snabbare. </p>
@@ -46,7 +46,7 @@
                 <p class="about-seminars"> Program för Konferens om Frontendutveckling </p>
                 <div class="seminarier-box">
                     <div class="seminarier-box1"> <!-- Day 1 -->
-                        <h3><img src="img/eighteen.png" width="50px" height="50px" alt=""> Dag 1 - 18 oktober 2024 </h3>
+                        <h3><img src="img/eighteen.png" width="50" height="50" alt=""> Dag 1 - 18 oktober 2024 </h3>
                             <div class="seminarier-box2">
                                 <h4> Seminarium 1: Modern Web Performance </h4>
                                 <p> Tid: 09:00 - 12:00 </p>
@@ -57,7 +57,7 @@
                             </div>
                     </div>
                     <div class="seminarier-box1"> <!-- Day 2 -->
-                        <h3><img src="img/nineteen.png" width="50px" height="50px" alt=""> Dag 1 - 18 oktober 2024 </h3>
+                        <h3><img src="img/nineteen.png" width="50" height="50" alt="Image showing 19th of october"> Dag 2 - 19 oktober 2024 </h3>
                         <div class="seminarier-box2">
                             <h4> Seminarium 2: Användarupplevelse och Design </h4>
                             <p> Tid: 09:00 - 12:00 </p>
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                     <div class="seminarier-box1"> <!-- Day 3 -->
-                        <h3><img src="img/twenty.png" width="50px" height="50px" alt=""> Dag 3 - 20 oktober 2024 </h3>
+                        <h3><img src="img/twenty.png" width="50" height="50" alt=""> Dag 3 - 20 oktober 2024 </h3>
                         <div class="seminarier-box2">
                             <h4> Seminarium 3: JavaScript-ramverk i Fokus </h4>
                             <p> Tid: 09:00 - 12:00 </p>
@@ -104,7 +104,7 @@
                             <span class="error-message"> Ange din adress (valfritt). </span>
                             <!-- Telephone number -->
                             <label for="telephone-number"> Telefonnummer: </label>  
-                            <input type="text" id="telephone-number" name="telephone-number" placeholder="+46 xx xxx xxx" required> 
+                            <input type="text" id="telephone-number" name="telephone-number" placeholder="+46 xxxxxxxxx" required> 
                             <span class="error-message"> Ange nummer. </span>
                             <!-- E-mail address -->
                             <label for="email"> E-post: </label>
@@ -116,7 +116,7 @@
                         <fieldset> <!-- Menu choices of food and beverage (Drop-down list)-->
                             <legend> Matmeny </legend>
                             <form action="#" method="POST"> <!-- Fake link -->
-                                <label for="food-menu"> <img class="img-food" src="img\food.png" alt=""> Vegetarisk & Kött alternativ (Välj 3):</label>
+                                <label for="food-menu"> <img class="img-food" src="img\food.png" alt=""> Välj typ av mat:</label>
                                 <select name="food-menu" id="food-menu">
                                     <option value="Vegetarisk-meny"> (Vegetarisk meny) Grönsaksquiche </option>
                                     <option value="Vegetarisk-meny"> (Vegetarisk meny) Kikärtsbiffare </option>
@@ -131,7 +131,7 @@
                                 </select>
                             </form>
                             <form action="#" method="POST"> 
-                                <label for="food-menu"> <img class="img-food" src="img/drink.png" alt=""> Dryckesalternativ & Fika (Välj 3): </label>
+                                <label for="food-menu"> <img class="img-food" src="img/drink.png" alt=""> Dryckesalternativ & Fika: </label>
                                 <select name="food-menu" id="food-menu">
                                     <option value="Fika"> Småkakor (kolasnittar och mandelsnittar). </option>
                                     <option value="Fika"> Färsk frukt (äpple, banan, päron). </option>
@@ -146,9 +146,9 @@
                             <div class="allergies-text">
                                 <div class="allergies-text1"><img src="img/food-allergy.png" alt=""></div>
                                 <div class="allergies-text1">
-                                    <h3> Medicinskt larm allergier!</h3>
+                                    <h3>Medicinskt larm allergier!</h3>
                                     <p> Vänligen skriv ner eventuella matallergier för att säkerställa en säker matupplevelse för alla. </p>
-                                    <p> Tack för ert samarbete! </p>
+                                    <p> Tack för ert intresse </p>
                                 </div>
                             </div>
                             <!-- Using "textarea" for the users can write down a multi-line text input field -->
@@ -180,31 +180,29 @@
                     </div>
                     <!-- Form for buying the tickets -->
                     <div class="ticket-buying-container">
-                        <form action="#" method="POST"> <!-- Fake link -->
-                            <h1> Köp 3-dagsbiljett </h1>
-                            <label for="name"> Fullständigt namn: </label>
-                            <input type="text" id="name" name="name" required>
-                            <label for="email"> E-post: </label>
-                            <input type="email" id="email" name="email" required>
-                            <!-- Choices for choosing the days for seminar -->
-                            <fieldset class="ticket-choices"> <!-- Using "fieldset" for relating elements within a form -->
-                                <legend> Vilka dagar ska du delta? </legend> <!-- Using "legend" for explaining the title -->
-                                <div class="checkbox-label">
-                                    <input type="checkbox" id="day1" name="days" value="18">
-                                    <label for="day1"> 18 Oktober 2024</label>
-                                </div>
-                                <div class="checkbox-label">
-                                    <input type="checkbox" id="day2" name="days" value="19">
-                                    <label for="day2"> 19 Oktober 2024</label>
-                                </div>
-                                <div class="checkbox-label">
-                                    <input type="checkbox" id="day3" name="days" value="20">
-                                    <label for="day3"> 20 Oktober 2024</label>
-                                </div>
-                            </fieldset>
-                            <!-- Submit button button for buying the tickets -->
-                            <input type="submit" value="Köp biljett">
-                        </form>
+                        <h1> Köp biljett </h1>
+                        <label for="name"> Fullständigt namn: </label>
+                        <input type="text" id="name" name="name">
+                        <label for="email"> E-post: </label>
+                        <input type="email" id="email" name="email">
+                        <!-- Choices for choosing the days for seminar -->
+                        <fieldset class="ticket-choices"> <!-- Using "fieldset" for relating elements within a form -->
+                            <legend> Vilka dagar ska du delta? </legend> <!-- Using "legend" for explaining the title -->
+                            <div class="checkbox-label">
+                                <input type="checkbox" id="day1" name="days" value="18">
+                                <label for="day1"> 18 Oktober 2024</label>
+                            </div>
+                            <div class="checkbox-label">
+                                <input type="checkbox" id="day2" name="days" value="19">
+                                <label for="day2"> 19 Oktober 2024</label>
+                            </div>
+                            <div class="checkbox-label">
+                                <input type="checkbox" id="day3" name="days" value="20">
+                                <label for="day3"> 20 Oktober 2024</label>
+                            </div>
+                        </fieldset>
+                        <!-- Submit button button for buying the tickets -->
+                        <input type="submit" value="Köp biljett">
                     </div>
                     <div class="ticket-included">
                         <!-- What is included -->
@@ -259,15 +257,13 @@
                     </div>
                     <div class="contact-info"> <!-- Contact informations -->
                         <ul>
-                            <h2> Kontaktinformation </h2>
                             <li><img src="img/www.png" alt=""> <a href="http://www.battrewebb2024.se"> www.battrewebb2024.se </a></li>
                             <li><img src="img/email.png" alt=""> <a href="mailto:info@battrewebb2024.se"> info@battrewebb2024.se </a></li>
-                            <li><img src="img/address.png" alt=""> Svenska Mässan, Mässans Gata 24, 412 51 Göteborg, Sverige </li>
+                            <li><img src="img/address.png" alt=""> Svenska Mässan, 412 51 Göteborg, Sverige </li>
                         </ul>
                     </div>
                     <div class="social-media"> <!-- Social media -->
                         <ul>
-                            <h2> Följ oss </h2>
                             <li><img src="img/twitter.png" alt=""> <a href="https://twitter.com/BättreWebb2024"> @BättreWebb2024 </a></li>
                             <li><img src="img/linkedin.png" alt=""> <a href="https://linkedin.com/company/battrewebb2024"> linkedin.com/company/battrewebb2024 </a> </a></li>
                             <li><img src="img/instagram.png" alt=""> <a href="https://instagram.com/battrewebbconf"> @battrewebbconf </a></li>
