Fixed Responsiv design

--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     <main>
         <nav class="side-nav"> <!-- Create "nav" to display various menus -->
             <ul>
-                <li><a href="#home"> <img src="img/pacman.png" alt=""> Hem </a></li>
-                <li><a href="#seminars"> <img src="img/ghost-red.png" alt=""> <br> Seminarier </a></li>
-                <li><a href="#signup"> Anmälan <img src="img/ghost-blue.png" alt=""></a></li>
-                <li><a href="#price"> <img src="img/ghost-pink.png" alt=""> Priser & biljetter </a></li>
-                <li><a href="#contact"> Kontakta oss <br><img src="img/ghost-yellow.png" alt=""></a></li>
+                <li><a href="#home"> <img src="img/pacman.png" alt="Packman image in nav menu"> Hem </a></li>
+                <li><a href="#seminars"> <img src="img/ghost-red.png" alt="Red-ghost image in nav menu"> <br> Seminarier </a></li>
+                <li><a href="#signup"> Anmälan <img src="img/ghost-blue.png" alt="Blue-ghost image in nav menu"></a></li>
+                <li><a href="#price"> <img src="img/ghost-pink.png" alt="Pink-ghost image in nav menu"> Priser & biljetter </a></li>
+                <li><a href="#contact"> Kontakta oss <br><img src="img/ghost-yellow.png" alt="Yellow-ghost image in nav menu"></a></li>
             </ul>
         </nav>
         
         <div class="section-container"> <!-- To create "Section" for making dropdown list, the users can choose menus --> 
             <div class="title-menu">
-                <div class="title-name"><h2> Om Konferensen <img src="img/title-pacman.png" alt=""></h2></div>
+                <div class="title-name"><h2> Om Konferensen <img src="img/title-pacman.png" alt="Moving packman image in title"></h2></div>
             </div>
             <div class="about-web"> <!-- Konferensinformation -->
-                <p><img src="img/october.png" alt=""> Datum: 18 - 20 oktober 2024 </p>
-                <p><img src="img/gps.png" alt=""> Plats: Göteborgs Konferenscenter </p>
+                <p><img src="img/october.png" alt="Image showing october month"> Datum: 18 - 20 oktober 2024 </p>
+                <p><img src="img/gps.png" alt="Image showing conference place"> Plats: Göteborgs Konferenscenter </p>
                 <p class="about-conference"> Välkommen till årets största konferens om frontendutveckling! Under tre dagar kan du lära dig om de senaste trenderna inom webbutveckling, design och användarupplevelse (UX) genom över 10 seminarier med experter. 
                     Frontendutvecklingskonferensen är ett årligt evenemang för utvecklare och designers som vill hålla sig uppdaterade med de nyaste verktygen och trenderna. 
                     Det erbjuds föreläsningar, workshops och nätverksmöjligheter, med fokus på ämnen som HTML, CSS, JavaScript, UX/UI och hur man gör webbsidor snabbare. </p>
@@ -41,41 +41,44 @@
             <!-- Section: Seminarier -->
             <section id="seminars">
                 <div class="title-menu">
-                    <div class="title-name"><h2><img src="img/packman-menu.png" alt=""> Seminarier <img src="img/title-redghost.png" alt=""></h2></div>
+                    <div class="title-name"><h2><img src="img/packman-menu.png" alt="Moving packman image in title"> Seminarier <img src="img/title-redghost.png" alt="Moving red-ghost image in title"></h2></div>
                 </div>
                 <p class="about-seminars"> Program för Konferens om Frontendutveckling </p>
                 <div class="seminarier-box">
                     <div class="seminarier-box1"> <!-- Day 1 -->
-                        <h3><img src="img/eighteen.png" width="50" height="50" alt=""> Dag 1 - 18 oktober 2024 </h3>
+                        <h3><img src="img/eighteen.png" width="50" height="50" alt="Image showing 18th of october"> Dag 1 - 18 oktober 2024 </h3>
                             <div class="seminarier-box2">
-                                <h4> Seminarium 1: Modern Web Performance </h4>
-                                <p> Tid: 09:00 - 12:00 </p>
-                                <p> Lär dig att optimera prestandan på webbapplikationer för en bättre användarupplevelse. Vi går igenom tekniker som lazy loading och bildoptimering. </p>
-                                <h4> Workshop: Verktyg för Prestandaoptimering </h4>
-                                <p> Tid: 13:00 - 16:00: </p>
-                                <p> Praktisk workshop där du testar verktyg för att mäta och förbättra webbplatsens prestanda. </p>
+                                <ul>
+                                    <li> 09:00 - 09:30 Mingel för deltagare. </li>
+                                    <li> 09:30 - 10:15 Framtidens hållbara städer </li>
+                                    <li> 10:30 - 11:30 Digital omvandling i näringslivet </li>
+                                    <li> 11:45 - 12:45 Hållbart ledarskap </li>
+                                    <li> 12:45 - 14:00 Lunch </li>
+                                    <li> 14:00 - 15:00 AI och arbetsmarknaden </li>
+                                    <li> 15:15 - 16:15 Etik och AI </li>
+                                </ul>
                             </div>
                     </div>
                     <div class="seminarier-box1"> <!-- Day 2 -->
                         <h3><img src="img/nineteen.png" width="50" height="50" alt="Image showing 19th of october"> Dag 2 - 19 oktober 2024 </h3>
                         <div class="seminarier-box2">
-                            <h4> Seminarium 2: Användarupplevelse och Design </h4>
-                            <p> Tid: 09:00 - 12:00 </p>
-                            <p> Diskussion om viktiga principer för UX-design och hur de påverkar utvecklingen av webbapplikationer. </p>
-                            <h4> Workshop: Designa med FOCUS </h4>
-                            <p> Tid: 13:00 - 16:00: </p>
-                            <p> En interaktiv workshop där du får skapa prototyper och få feedback från kollegor. </p>
+                            <ul>
+                                <li> 09:00 - 10:00 Företagens klimatansvar </li>
+                                <li> 10:15 - 11:15 Framtidens arbetsplats </li>
+                                <li> 11:30 - 12:30 Cybersäkerhet idag och imorgon </li>
+                                <li> 12:30 - 14:00 Lunch </li>
+                                <li> 14:00 - 15:00 Innovation och entreprenörskap </li>
+                            </ul>
                         </div>
                     </div>
                     <div class="seminarier-box1"> <!-- Day 3 -->
-                        <h3><img src="img/twenty.png" width="50" height="50" alt=""> Dag 3 - 20 oktober 2024 </h3>
+                        <h3><img src="img/twenty.png" width="50" height="50" alt="Image showing 20th of october"> Dag 3 - 20 oktober 2024 </h3>
                         <div class="seminarier-box2">
-                            <h4> Seminarium 3: JavaScript-ramverk i Fokus </h4>
-                            <p> Tid: 09:00 - 12:00 </p>
-                            <p> Genomgång av populära JavaScript-ramverk (React, Vue, Angular) och deras användning i moderna applikationer. </p>
-                            <h4> Workshop: Designa med FOCUS </h4>
-                            <p> Tid: 13:00 - 16:00: </p>
-                            <p> Konferensen avslutas med mingel och möjlighet att diskutera lärdomar från evenemanget. </p>
+                            <ul>
+                                <li> 09:00 - 10:00 Hållbar konsumtion </li>
+                                <li> 10:15 - 11:15 Den globala ekonomins framtid </li>
+                                <li> 11:30 - 12:00 Avslutningsceremoni och summering av konferensen och tack till deltagarna. </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -84,7 +87,7 @@
             <!-- Section: Anmälan -->
             <section id="signup">
                 <div class="title-menu">
-                    <div class="title-name"><h2><img src="img/packman-menu.png" alt=""> Anmälan <img src="img/title-blueghost.png" alt=""></h2> </div>
+                    <div class="title-name"><h2><img src="img/packman-menu.png" alt="Moving packman image in title"> Anmälan <img src="img/title-blueghost.png" alt="Moving blue-ghost image in title"></h2> </div>
                 </div>    
                 <div class="signup-container">
                     <div class="signup-form"> <!-- Signup-form -->
@@ -115,23 +118,23 @@
                     <div class="food-form"> <!-- Food-form -->
                         <fieldset> <!-- Menu choices of food and beverage (Drop-down list)-->
                             <legend> Matmeny </legend>
-                            <form action="#" method="POST"> <!-- Fake link -->
-                                <label for="food-menu"> <img class="img-food" src="img\food.png" alt=""> Välj typ av mat:</label>
+                            <form action="#" method="POST"> 
+                                <label for="food-menu"> <img class="img-food" src="img\food.png" alt="Image showing food menu"> Välj typ av mat:</label>
                                 <select name="food-menu" id="food-menu">
                                     <option value="Vegetarisk-meny"> (Vegetarisk meny) Grönsaksquiche </option>
                                     <option value="Vegetarisk-meny"> (Vegetarisk meny) Kikärtsbiffare </option>
                                     <option value="Vegetarisk-meny"> (Vegetarisk meny) Rostad grönsakssallad </option>
                                     <option value="Vegetarisk-meny"> (Vegetarisk meny) Quinoasallad </option>
                                     <option value="Vegetarisk-meny"> (Vegetarisk meny) Linssallad </option>
-                                    <option value="Köttmeny"> (Köttmeny) Kycklingfilé </option>
-                                    <option value="Köttmeny"> (Köttmeny) Köttbullar i gräddsås </option>
-                                    <option value="Köttmeny"> (Köttmeny) Fläskkotlett </option>
-                                    <option value="Köttmeny"> (Köttmeny) Lammköttbullar </option>
-                                    <option value="Köttmeny"> (Köttmeny) Pasta med köttfärssås </option>
+                                    <option value="Fiskmeny"> (Fiskmeny) Grillad lax med citronsmör </option>
+                                    <option value="Fiskmeny"> (Fiskmeny) Torsk med vitlök och örter </option>
+                                    <option value="Fiskmeny"> (Fiskmeny) Fisktacos </option>
+                                    <option value="Fiskmeny"> (Fiskmeny) Fisk och avokadosallad </option>
+                                    <option value="Fiskmeny"> (Fiskmeny) Ugnsbakad öring med mandel </option>
                                 </select>
                             </form>
                             <form action="#" method="POST"> 
-                                <label for="food-menu"> <img class="img-food" src="img/drink.png" alt=""> Dryckesalternativ & Fika: </label>
+                                <label for="food-menu"> <img class="img-food" src="img/drink.png" alt="Image showing beverage menu"> Dryckesalternativ & Fika: </label>
                                 <select name="food-menu" id="food-menu">
                                     <option value="Fika"> Småkakor (kolasnittar och mandelsnittar). </option>
                                     <option value="Fika"> Färsk frukt (äpple, banan, päron). </option>
@@ -144,7 +147,7 @@
                             <input class="submit" type="submit">
                         </fieldset> 
                             <div class="allergies-text">
-                                <div class="allergies-text1"><img src="img/food-allergy.png" alt=""></div>
+                                <div class="allergies-text1"><img src="img/food-allergy.png" alt="Image showing food-allergy"></div>
                                 <div class="allergies-text1">
                                     <h3>Medicinskt larm allergier!</h3>
                                     <p> Vänligen skriv ner eventuella matallergier för att säkerställa en säker matupplevelse för alla. </p>
@@ -161,7 +164,7 @@
             <!-- Section: Priser för biljetter -->
             <section id="price">
                 <div class="title-menu">
-                    <div class="title-name"><h2><img src="img/packman-menu.png" alt=""> Priser för biljetter <img src="img/title-pinkghost.png" alt=""></h2></div>
+                    <div class="title-name"><h2><img src="img/packman-menu.png" alt="Moving packman image in title"> Priser för biljetter <img src="img/title-pinkghost.png" alt="Moving pink-ghost image in title"></h2></div>
                 </div> 
                 <div class="price-form"> <!-- Tickets price & details -->
                     <div class="ticket-price">
@@ -208,10 +211,10 @@
                         <!-- What is included -->
                         <h3> Vad som ingår </h3>
                         <ul> <!-- Using "ul" for making a list -->
-                            <li> <img src="img/ghost-pink.png" alt=""> Tillgång till alla föreläsningar och workshops. </li>
-                            <li> <img src="img/title-pinkghost.png" alt=""> Lunch, eftermiddagsfika och middag under respektive dag. </li>
-                            <li> <img src="img/ghost-pink.png" alt=""> Drycker (kaffe, te, vatten, läsk). </li>
-                            <li> <img src="img/title-pinkghost.png" alt=""> Nätverksmöjligheter med andra utvecklare och branschledare. </li>
+                            <li> <img src="img/ghost-pink.png" alt="Image of ghost-pink moving line 1"> Tillgång till alla föreläsningar och workshops. </li>
+                            <li> <img src="img/title-pinkghost.png" alt="Image of ghost-pink moving line 2"> Lunch, eftermiddagsfika och middag under respektive dag. </li>
+                            <li> <img src="img/ghost-pink.png" alt="Image of ghost-pink moving line 3"> Drycker (kaffe, te, vatten, läsk). </li>
+                            <li> <img src="img/title-pinkghost.png" alt="Image of ghost-pink moving line 4"> Nätverksmöjligheter med andra utvecklare och branschledare. </li>
                         </ul>
                     </div>
                 </div>
@@ -220,7 +223,7 @@
             <!-- Section: Kontakta oss -->
             <section id="contact">
                 <div class="title-menu">
-                    <div class="title-name"><h2><img src="img/packman-menu.png" alt=""> Kontakta oss <img src="img/title-yellowghost.png" alt=""></h2></div>
+                    <div class="title-name"><h2><img src="img/packman-menu.png" alt="Moving packman image in title"> Kontakta oss <img src="img/title-yellowghost.png" alt="Moving yellow-ghost image in title"></h2></div>
                 </div> 
                 <div class="contact-container">
                     <div class="contact-betterweb">
@@ -230,7 +233,7 @@
                         <div class="person">
                             <ul>
                                 <li> Eventkoordinator </li>
-                                <li><img src="img/P.png" alt=""></li>
+                                <li><img src="img/P.png" alt="Image of Photsathon"></li>
                                 <li> Photsathon Karlsson </li>
                                 <li> E-post: <a href="mailto:photsathon.karlsson@battrewebb2024.se"> photsathon.karlsson@battrewebb2024.se </a></li> <!-- link to e-mail -->
                                 <li> Telefon: +46 70 987 6543 </li>
@@ -239,7 +242,7 @@
                         <div class="person">
                             <ul>
                                 <li> Teknisk chef </li>
-                                <li><img src="img/J.png" alt=""></li>
+                                <li><img src="img/J.png" alt="Image of Josefin"></li>
                                 <li> Josefin Karlsson </li>
                                 <li> E-post: <a href="mailto:josefin.karlsson@battrewebb2024.se"> josefin.karlsson@battrewebb2024.se </a></li> 
                                 <li> Telefon: +46 70 123 9876 </li>
@@ -248,7 +251,7 @@
                         <div class="person">
                             <ul>
                                 <li> Teknisk chef </li>
-                                <li><img src="img/M.png" width="200px" height="200px"></li>
+                                <li><img src="img/M.png" width="200px" height="200px" alt="Image of Mattias"></li>
                                 <li> Mattias Karlsson </li>
                                 <li> E-post: <a href="mailto:mattias.karlsson@battrewebb2024.se"> mattias.karlsson@battrewebb2024.se </a></li> 
                                 <li> Telefon: +46 70 984 8468 </li>
@@ -257,16 +260,16 @@
                     </div>
                     <div class="contact-info"> <!-- Contact informations -->
                         <ul>
-                            <li><img src="img/www.png" alt=""> <a href="http://www.battrewebb2024.se"> www.battrewebb2024.se </a></li>
-                            <li><img src="img/email.png" alt=""> <a href="mailto:info@battrewebb2024.se"> info@battrewebb2024.se </a></li>
-                            <li><img src="img/address.png" alt=""> Svenska Mässan, 412 51 Göteborg, Sverige </li>
+                            <li><img src="img/www.png" alt="Image of website"> <a href="http://www.battrewebb2024.se"> www.battrewebb2024.se </a></li>
+                            <li><img src="img/email.png" alt="Image of email"> <a href="mailto:info@battrewebb2024.se"> info@battrewebb2024.se </a></li>
+                            <li><img src="img/address.png" alt="Image of address"> Svenska Mässan, 412 51 Göteborg, Sverige </li>
                         </ul>
                     </div>
                     <div class="social-media"> <!-- Social media -->
                         <ul>
-                            <li><img src="img/twitter.png" alt=""> <a href="https://twitter.com/BättreWebb2024"> @BättreWebb2024 </a></li>
-                            <li><img src="img/linkedin.png" alt=""> <a href="https://linkedin.com/company/battrewebb2024"> linkedin.com/company/battrewebb2024 </a> </a></li>
-                            <li><img src="img/instagram.png" alt=""> <a href="https://instagram.com/battrewebbconf"> @battrewebbconf </a></li>
+                            <li><img src="img/twitter.png" alt="Image of twitter"> <a href="https://twitter.com/BättreWebb2024"> @BättreWebb2024 </a></li>
+                            <li><img src="img/linkedin.png" alt="Image of linkedin"> <a href="https://linkedin.com/company/battrewebb2024"> linkedin.com/company/battrewebb2024 </a> </a></li>
+                            <li><img src="img/instagram.png" alt="Image of instagram"> <a href="https://instagram.com/battrewebbconf"> @battrewebbconf </a></li>
                         </ul>
                     </div>
                 </div>
