Fixed header (nav) and added footer

--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Bättre Webb 2024 - Konferens </title>
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="css\style.css">    
 </head>
 <body>
     <!-- Header -->
     <header>
         <section id="home">
-            <h1> Bättre Webb 2024 </h1>   
-        </section>  
-    </header>
-
-    <!-- Main -->
-    <main>
-        <nav class="side-nav"> <!-- Create "nav" to display various menus -->
+            <h1> Bättre Webb 2024 </h1> 
+            <p> Den årliga konferensen för frontendutvecklare, 18-20 oktober i Göteborg </p>  
+        </section> 
+        <nav> <!-- Create "nav" to display various menus -->
             <ul>
                 <li><a href="#home"> <img src="img/pacman.png" alt="Packman image in nav menu"> Hem </a></li>
                 <li><a href="#seminars"> <img src="img/ghost-red.png" alt="Red-ghost image in nav menu"> <br> Seminarier </a></li>
@@ -24,8 +21,11 @@
                 <li><a href="#price"> <img src="img/ghost-pink.png" alt="Pink-ghost image in nav menu"> Priser & biljetter </a></li>
                 <li><a href="#contact"> Kontakta oss <br><img src="img/ghost-yellow.png" alt="Yellow-ghost image in nav menu"></a></li>
             </ul>
-        </nav>
-        
+        </nav> 
+    </header>
+
+    <!-- Main -->
+    <main> 
         <div class="section-container"> <!-- To create "Section" for making dropdown list, the users can choose menus --> 
             <div class="title-menu">
                 <div class="title-name"><h2> Om Konferensen <img src="img/title-pacman.png" alt="Moving packman image in title"></h2></div>
@@ -277,4 +277,7 @@
         </div>
     </main>
 </body>
+<footer>
+    <a href="#home" class="home-button"> Hem </a>
+</footer>
 </html>
